Main activity now uses Toolbar instead of Actionbar. First advantage of this is a fancy animation for hiding/showing toolbar.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,13 +23,15 @@
         <activity
             android:name=".ColoursActivity"
             android:label="@string/action_colours"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/OtherActivityTheme" >
         </activity>
 
         <activity
             android:name=".SettingsActivity"
             android:label="@string/action_settings"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/OtherActivityTheme" >
         </activity>
     </application>
 
