--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:icon="@mipmap/ic_launcher_me"
         android:logo="@drawable/ic_logo"
         android:theme="@style/AppTheme"
+        android:hardwareAccelerated="true"
         >
         <activity
             android:name=".MainActivity"
