completely rewrote PaletteActivity (used to be called ColorsActivity)
1. list view is now a grid view

2. displayed palette swatches are circular
  2a. we need to fix the wasteful calls in onDraw() implementation of CircularImageView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,17 +21,17 @@
         </activity>
 
         <activity
-            android:name=".ColoursActivity"
-            android:label="@string/action_colours"
+            android:name=".PaletteActivity"
+            android:label="@string/action_palette"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/OtherActivityTheme" >
+            android:theme="@style/PaletteActivityTheme" >
         </activity>
 
         <activity
             android:name=".SettingsActivity"
             android:label="@string/action_settings"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/OtherActivityTheme" >
+            android:theme="@style/SettingsActivityTheme" >
         </activity>
     </application>
 
