--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,11 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="true"
+        android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher_me"
         android:theme="@style/AppTheme"
         android:hardwareAccelerated="true"
+        android:allowBackup="true"
         >
         <activity
             android:name=".MainActivity"
