--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.android.support:palette-v7:22.1.1'
     compile 'com.android.support:design:22.2.1'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
