--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,16 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '22.0.1'
+    buildToolsVersion '23.0.3'
     defaultConfig {
         applicationId "jetsetilly.mandelbrot"
         versionCode 1
         versionName "1.0"
         minSdkVersion 22
         targetSdkVersion 23
+
+        renderscriptTargetApi 19
+        renderscriptSupportModeEnabled true
     }
     buildTypes {
         release {
