--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
 
         renderscriptTargetApi 19
         renderscriptSupportModeEnabled true
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
@@ -30,4 +31,7 @@ dependencies {
     compile 'com.android.support:palette-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-annotations:23.4.0'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
 }
